[FIX] Harmonize ratio calculations and increase readability

--- a/less/ratios.less
+++ b/less/ratios.less
@@ -1,28 +1,24 @@
 
-
-
 .ar-1-1 {
-  padding-top: 100%;
+  padding-top: percentage(1 / (1 / 2) );
 }
 
 .ar-2-1 {
-  padding-top: 50%;
+  padding-top: percentage(1 / (2 / 1) );
 }
 
 .ar-4-3 {
-  padding-top: 75%;
+  padding-top: percentage(1 / (4 / 3) );
 }
 
 .ar-16-9 {
-  padding-top: ~"calc(100% / (16/9))";
+  padding-top: percentage(1 / (16 / 9) );
 }
 
 .ar-16-10 {
-  padding-top: ~"calc(100% / 1.6)";
+  padding-top: percentage(1 / (16 / 10) );
 }
 
-
-
 .ar-golden {
-  padding-top: ~"calc(100% / 1.618)";
+  padding-top: percentage(1 / (16.18 / 10) );
 }
